--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,10 +32,10 @@ jobs:
       image: jenkins/pct
       env:
         CHECKOUT_SRC: "https://github.com/${{ github.repository }}.git"
-        VERSION: "${{ github.ref }}"
+        VERSION: "${{ github.head_ref || 'master' }}"
     steps:
       # gets the Jenkins version from master's branch pom.xml to test against
       - name: Fetch Jenkins version
         run: |
           echo "JENKINS_VERSION=$(curl -s https://raw.githubusercontent.com/${{ github.repository }}/master/pom.xml | awk -F '[<>]' '/jenkins.version/{print $3}')" >> $GITHUB_ENV
-      - run: run-pct
+      - run: set
